// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtInput Snap render AtInput -- props border 1`] = `
<view
  class="at-input"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputCHNJBGOI"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props clear 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputLPJADIPN"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props disabled 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--disabled"
  >
    <view
      class="at-input__overlay"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputAPDGBEML"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props editable 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--disabled"
  >
    <view
      class="at-input__overlay"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputNJHFJCIA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props error 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--error"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputCLMGGJHA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <view
      class="at-input__icon"
    >
      <text
        class="at-icon at-icon-alert-circle at-input__icon-alert"
      />
    </view>
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props maxLength 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputPBEECPAH"
      maxlength="10"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props name 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputANJHLDEI"
      maxlength="140"
      name="name"
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props placeholder 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputBGEBEDLO"
      maxlength="140"
      name=""
      password="false"
      placeholder="placeholder"
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props required 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputIMCFLNLN"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props style 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputGLKEGNBK"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props title 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <label
      class="at-input__title"
      for=""
    >
      title
    </label>
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputBNJHDNGA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(digit) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputKEKJCAAG"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="digit"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(idcard) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputCCCGKKHK"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="idcard"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(number) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputDNHGONPA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="number"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(password) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputCPPLAJEA"
      maxlength="140"
      name=""
      password="true"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(phone) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputMDJJIHNA"
      maxlength="11"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="number"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props value 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputILBIACLI"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;

exports[`AtInput Snap render initial AtInput 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      adjustposition="false"
      autofocus="false"
      class="at-input__input"
      confirmtype="done"
      cursor="0"
      cursorspacing="50"
      id="weui-inputHKKIIGFA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholderclass="placeholder "
      placeholderstyle=""
      type="text"
    />
    <!---->
    <!---->
    <view
      class="at-input__children"
    />
  </view>
</view>
`;
